--- a/first-proyect-black-jack/index.html
+++ b/first-proyect-black-jack/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Black Jack - BY Juan Reyes</title>
+    <title>Black Jack - By Juan Reyes</title>
 
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
@@ -18,20 +18,20 @@
     </header> 
 
     <nav class="nav-bar">
+        <div id="playerHeading">
+            <h1> Player 1 - <small id="scoreBarPlayer"></small></h1>
+        </div>
+
         <div class="col text-center mt-2" id="bottonContainer">
 
             <button class="btn btn-danger" id="btnNewGame"> NEW GAME! </button>
-            <button class="btn btn-secondary" id="btnStop"> STOP </button>
+            <button class="btn btn-secondary" id="btnStay"> STAY </button>
             <button class="btn btn-primary" id="btnAskCard"> ASK CARD </button>
 
         </div>
 
-        <div id="playerHeading">
-            <h1> Player 1 - <small> 0 </small></h1>
-        </div>
-
         <div id="bossHeading">
-            <h1>CPU - <small>name - </small>0</h1>
+            <h1>CPU - <small id="scoreBarPc"></small></h1>
         </div>
     </nav>
     
